--- a/README
+++ b/README
@@ -19,4 +19,6 @@ These are all included in the Explosivo directory.
 Homepage
 --------
 
+Binaries and screenshots can be found at the following URL:
+
 http://antimac.org/explosivo
