--- a/README
+++ b/README
@@ -24,12 +24,12 @@ It's easy.  The two build configurations I've setup are Debug and Release, with 
 Screenshots
 -----------
 
-[!(http://antimac.org/etc/explosivo/explosivo-2-th.png)](http://antimac.org/etc/explosivo/explosivo-2.png)
-[!(http://antimac.org/etc/explosivo/explosivo-6-th.png)](http://antimac.org/etc/explosivo/explosivo-6.png)
-[!(http://antimac.org/etc/explosivo/explosivo-3-th.png)](http://antimac.org/etc/explosivo/explosivo-3.png)
-[!(http://antimac.org/etc/explosivo/explosivo-1-th.png)](http://antimac.org/etc/explosivo/explosivo-1.png)
-[!(http://antimac.org/etc/explosivo/explosivo-5-th.png)](http://antimac.org/etc/explosivo/explosivo-5.png)
-[!(http://antimac.org/etc/explosivo/explosivo-4-th.png)](http://antimac.org/etc/explosivo/explosivo-4.png)
+[![Alt](http://antimac.org/etc/explosivo/explosivo-2-th.png)](http://antimac.org/etc/explosivo/explosivo-2.png)
+[![Alt](http://antimac.org/etc/explosivo/explosivo-6-th.png)](http://antimac.org/etc/explosivo/explosivo-6.png)
+[![Alt](http://antimac.org/etc/explosivo/explosivo-3-th.png)](http://antimac.org/etc/explosivo/explosivo-3.png)
+[![Alt](http://antimac.org/etc/explosivo/explosivo-1-th.png)](http://antimac.org/etc/explosivo/explosivo-1.png)
+[![Alt](http://antimac.org/etc/explosivo/explosivo-5-th.png)](http://antimac.org/etc/explosivo/explosivo-5.png)
+[![Alt](http://antimac.org/etc/explosivo/explosivo-4-th.png)](http://antimac.org/etc/explosivo/explosivo-4.png)
 
 Binaries
 --------
